# RVA

./: desktop.ini
Group07/code/: .gitignore  README.md  pyproject.toml
Group07/code/src/rva_proj1/: __init__.py  calibration.py
Group07/code/src/rva_proj1/models/: minecraft_diamond_sword.glb
rva-proj1/: rva cube.docx  sword_markers.ai
rva-proj1/src/rva_proj1/: __init__.py  marker.py  renderer.py  sword.py  ui.py
rva-proj1/src/rva_proj1/models/: minecraft_diamond_sword.txt
rva-proj2/: cards print.docx  extras.docx
rva-proj2/RVA-proj2/: .gitignore
rva-proj2/RVA-proj2/Assets/Cartoon_Weapon_Pack/Prefab/: Arrow.prefab
rva-proj2/RVA-proj2/Assets/Material/: NormalAttack.mat  SpecialAttack.mat
rva-proj2/RVA-proj2/Assets/Resources/: VuforiaConfiguration.asset
rva-proj2/RVA-proj2/Assets/Rhino/: Rhino.controller
rva-proj2/RVA-proj2/Assets/Scenes/: FightScene.unity  MainMenu.unity  SampleScene.unity
rva-proj2/RVA-proj2/Assets/Scripts/: ArrowController.cs  Attacks.cs  CameraSettings.cs  CaptureCactusController.cs  CaptureInfo.cs  CaptureInsectController.cs  CaptureRhinoController.cs  DistanceUtils.cs  FightCactusController.cs  FightController.cs  FightInsectController.cs  FightRhinoController.cs  LegacyCaptureRhinoController.cs  MonsterAttack.cs  MonsterGeneric.cs  Target.cs  TargetController.cs  TargetHandler.cs  UndoController.cs
rva-proj2/RVA-proj2/Assets/Scripts/UI/: BackController.cs  DeckController.cs  (+2 more)
rva-proj2/RVA-proj2/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
rva-proj2/RVA-proj2/QCAR/: lh  somedata16
(+7 files in other folders)
